# HeroGame

./: .gitignore  AHero.h  CMakeLists.txt  Game.h  HeroFactory.h  HeroTypes.h  IMage.h  IWarrior.h  Mage.h  MageFactory.h  Warrior.h  WarriorFactory.h  class_diagram.puml  main.cpp
